--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,34 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
+    <name>Transitive Dependency Plugin</name>
+    <description>Plugin is used to detect tranitive dependencies in maven project</description>
+    <url>https://github.com/azee/transitive-dependency-plugin</url>
+    <developers>
+        <developer>
+            <id>owner</id>
+            <name>Aziz Namazov</name>
+            <email>azeedrums@gmail.com</email>
+            <timezone>UTC+4</timezone>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git:git@github.com:azee/transitive-dependency-plugin</connection>
+        <developerConnection>scm:git:git@github.com:azee/transitive-dependency-plugin.git</developerConnection>
+        <url>scm:git:git@github.com:azee/transitive-dependency-plugin.git</url>
+    </scm>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <properties>
         <maven.version>3.3.9</maven.version>
     </properties>
-
-    <name>Transitive Dependency Plugin</name>
 
     <dependencies>
         <dependency>
