--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>ru.greatbit</groupId>
     <artifactId>transitive-dependency-maven-plugin</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Transitive Dependency Plugin</name>
